--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/zacfinger/"
+    "url": "https://github.com/zacfinger/randomfootnote.git"
   },
   "keywords": [
     "pomo"
