--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Zac Finger",
   "license": "GPL-3.0",
   "dependencies": {
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
