Finished getIdeologies() function. Uses largely same algorithm as getArtMovements(), with some modifications to account for inadvertently encountered sentences included in the array of HTML elements. This could be improved as the potential exists for ideologies to be excluded. To preserve combination adjectives such as 'social democratic' preceding ideologies, every single word in front of the final word in an ideology or art movement is considered a single adjective in the adjective array. Had to hard code a number of special cases because the algorithm needs improvement. Ideologies or movements that are inferred from derivative forms are not found in the inDictionary() function. May need to implement a lookup function to determine if a page exists for the movement on Wikipedia. Made movementsToRemove array global rather than local to each function. Accounted for non-standard hyphenization but will need to improve this.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
     "moment": "^2.22.2",
-    "sqlite3": "^4.0.4",
+    "node-pre-gyp": "^0.17.0",
+    "pos": "^0.4.2",
+    "sqlite3": "^4.2.0",
+    "thesaurus": "0.0.1",
     "twitter": "^1.7.1",
     "xmlhttprequest": "^1.8.0"
   }
