--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.22.2",
     "node-pre-gyp": "^0.17.0",
     "pos": "^0.4.2",
+    "randombytes": "^2.1.0",
     "sqlite3": "^4.2.0",
     "thesaurus": "0.0.1",
     "twitter": "^1.7.1",
